stacks/network/iptables.rules
*filter

############################
# POLÍTICAS POR DEFECTO
############################
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

############################
# LOOPBACK
############################
-A INPUT -i lo -j ACCEPT

############################
# CONEXIONES ESTABLECIDAS
############################
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

############################
# DHCP
############################
-A INPUT -p udp --sport 68 --dport 67 -j ACCEPT

############################
# VPN (WIREGUARD)
############################

# Permitir entrada WireGuard
-A INPUT -p udp --dport 51820 -j ACCEPT

# Permitir tráfico desde VPN hacia redes internas
-A FORWARD -i wg0 -o eth+ -j ACCEPT

# Permitir respuestas hacia VPN
-A FORWARD -o wg0 -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

############################
# REGLAS ENTRE REDES DOCKER
############################

# Services <-> Development (permitido)
-A FORWARD -s 172.20.0.0/24 -d 172.40.0.0/24 -j ACCEPT
-A FORWARD -s 172.40.0.0/24 -d 172.20.0.0/24 -j ACCEPT

# BLOQUEO: Backups ↔ Services
-A FORWARD -s 172.30.0.0/24 -d 172.20.0.0/24 -j DROP
-A FORWARD -s 172.20.0.0/24 -d 172.30.0.0/24 -j DROP

############################
# ACCESO VPN A TODAS LAS REDES
############################

# Permitir explícitamente acceso desde VPN a redes internas
-A FORWARD -s 172.10.0.0/24 -d 172.20.0.0/24 -j ACCEPT
-A FORWARD -s 172.10.0.0/24 -d 172.30.0.0/24 -j ACCEPT
-A FORWARD -s 172.10.0.0/24 -d 172.40.0.0/24 -j ACCEPT

COMMIT


*nat

############################
# NAT
############################
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# NAT para redes internas (Docker)
-A POSTROUTING -s 172.10.0.0/24 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/24 -j MASQUERADE
-A POSTROUTING -s 172.30.0.0/24 -j MASQUERADE
-A POSTROUTING -s 172.40.0.0/24 -j MASQUERADE

COMMIT
